gccida/c3/type_for_mode
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1809:22: error: must use 'enum' tag to refer to type 'machine_mode'
tree  type_for_mode( machine_mode mode, int unsignedp) 
                     ^
                     enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1811:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // [rsp+8h] [rbp-A8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1812:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // [rsp+10h] [rbp-A0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1813:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // [rsp+18h] [rbp-98h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1814:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // [rsp+20h] [rbp-90h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1815:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // [rsp+28h] [rbp-88h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1816:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // [rsp+30h] [rbp-80h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1817:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // [rsp+A8h] [rbp-8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1927:19: error: expected expression
v5 = ( tree_node *)*( &global_trees + 38); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1927:8: error: use of undeclared identifier 'tree_node'
v5 = ( tree_node *)*( &global_trees + 38); 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1929:19: error: expected expression
v5 = ( tree_node *)*( &global_trees + 47); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1929:8: error: use of undeclared identifier 'tree_node'
v5 = ( tree_node *)*( &global_trees + 47); 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1934:19: error: expected expression
v4 = ( tree_node *)*( &global_trees + 37); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1934:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)*( &global_trees + 37); 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1936:19: error: expected expression
v4 = ( tree_node *)*( &global_trees + 46); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1936:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)*( &global_trees + 46); 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1941:19: error: expected expression
v6 = ( tree_node *)*( &global_trees + 34); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1941:8: error: use of undeclared identifier 'tree_node'
v6 = ( tree_node *)*( &global_trees + 34); 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/c-common.c:1943:19: error: expected expression
v6 = ( tree_node *)*( &global_trees + 43); 
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/type_for_mode/src/obj/c-common.o] Error 1
